# rust_log_aggregator

./: Cargo.toml  README.md  logs.db
migrations/: 20230612060224_logevents.sql
src/: database.rs  main.rs  receiver.rs
