[package]
name = "rust-sqllite-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.164", features = ["derive"] } 
actix-web = "4.3.1"
sqlx = { version = "0.6.3", features = [ "runtime-async-std-native-tls" , "sqlite" ] }
