[package]
name = "rust-sqllite-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.164", features = ["derive"] } 
sqlx = { version = "0.6.3", features = [ "runtime-async-std-native-tls" , "sqlite" ] }
ctrlc = { version = "3.0", features = ["termination"] }
ctrlc-async = "3.2.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
route-recognizer = "0.2"